cocoa: fix a11y labeling & state on search icon

When this icon is present, it means that there is no current page info to show,
and so it has no tooltip and does not accept mouse presses. This change:

1) Makes the button always have its a11y label, even when it doesn't respond to
   mouse presses
2) Adds LocationBarDecoration::UpdateAccessibilityView to keep the a11y view's
   state synchronized with the decoration's state
3) Makes the Search icon actually reject mouse presses when they won't do
   anything

A side-effect of (3) is that clicking the Search icon now acts as though the
user had clicked the omnibox and focuses the omnibox, instead of doing nothing
at all with no feedback.

BUG=696232

Review-Url: https://codereview.chromium.org/2841963002
Cr-Commit-Position: refs/heads/master@{#467059}

Former-commit-id: 39063b7bab59e08486157cf48cd6b159c50a677c