chrome/browser/ui/cocoa/location_bar/location_bar_decoration.mm
@@ -88,7 +88,8 @@ const CGFloat kBackgroundFrameYInset = 2.0;
 }
 
 - (NSString*)accessibilityLabel {
-  return owner_->GetToolTip();
+  NSString* label = owner_->GetAccessibilityLabel();
+  return label ? label : owner_->GetToolTip();
 }
 
 @end
@@ -162,6 +163,10 @@ NSRect LocationBarDecoration::GetBackgroundFrame(NSRect frame) {
   return NSInsetRect(frame, 0.0, kBackgroundFrameYInset);
 }
 
+void LocationBarDecoration::UpdateAccessibilityView() {
+  [accessibility_view_.get() setEnabled:AcceptsMousePress()];
+}
+
 void LocationBarDecoration::DrawInFrame(NSRect frame, NSView* control_view) {
   NOTREACHED();
 }
@@ -194,6 +199,10 @@ void LocationBarDecoration::DrawWithBackgroundInFrame(NSRect frame,
 }
 
 NSString* LocationBarDecoration::GetToolTip() {
+  return nil;
+}
+
+NSString* LocationBarDecoration::GetAccessibilityLabel() {
   return nil;
 }
 
